# worker-py

./: .env.example  .pre-commit-config.yaml  README.md  logging.ini  pyproject.toml
.github/workflows/: ci-cd.yml
docker/: Dockerfile  dockerize.sh
src/: config.py  worker.py
