[tool.poetry]
name = "aurora-worker"
version = "0.1.0"
description = ""
authors = ["twoics <second_vozhzhov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
paho-mqtt = "^1.6.1"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
